 Version 0.59
 ============

 Released on 
  
 New features and improvements:

   - Rename the application to Open Firm Accounting (todo #1164).
   - BatTreeview: add a Notes indicator (todo #1157).
   - ClassPage: add a Notes indicator (todo #1157).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - LedgerPage: add a Notes indicator (todo #1157).

 Bug fixes:

   - GuidedInput: take into account the user set ledger (todo #1152).
   - SettlementPage: fix column header (todo #1148).

 Other changes:

   - ofa.css: remove obsolete styles.

-----------------------------------------------------------------------
 Version 0.58
 ============

 Released on 2016-06-26
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - RecurrentOperation: make periodicity detail mandatory.
   - RecurrentManagement: improve detail column sort (todo #1146).
   - RecurrentManagement: generate operations on selected models (todo #1140).
   - UserPreferences: have a preference to edit date in overwrite mode (todo #707).
   - VAT: put its own icon on operation templates pages (todo #1138).
   - VAT: introduce the %BALANCE() function (todo #1158).
 
 Bug fixes:

   - Dossier: fix minimal effect date computing (todo #1144).
   - EntryPage: fix new entry insertion (todo #1133).
   - ReconciliationPage: fix debit vs. credit comparison (todo #1132).
   - RecurrentOperation: fix amount update on newly generated record (todo #1135).
   - RecurrentOperation: review index to allow many cancelled operations (todo #1137).
   - RecurrentOperation: fix sort collation on new records (todo #1155).
   - VATDeclaration: computes with actual rounded numbers (todo #1134).
   - VATDeclaration: improve treeview display (todo #1145).
   - VATDeclaration: make treeview columns sortable (todo #1143).

 Other changes:

   - my_date_editable_set_overwrite(): new function.
   - my_double_round_to_decimals(): new function.