@@ -81,6 +81,7 @@ enum {
 	OPE_TEMPLATE_COL_LABEL,
 	OPE_TEMPLATE_COL_LEDGER,
 	OPE_TEMPLATE_COL_NOTES,
+	OPE_TEMPLATE_COL_NOTES_PNG,
 	OPE_TEMPLATE_COL_UPD_USER,
 	OPE_TEMPLATE_COL_UPD_STAMP,
 	OPE_TEMPLATE_COL_RECURRENT,
